--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack --production",
-		"watch": "webpack --watch"
+		"build": "webpack --mode=production",
+		"watch": "webpack --mode=development --watch"
 	},
 	"author": "Samual Norman",
 	"license": "MIT",
