--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack --mode=production",
-		"watch": "webpack --mode=development --watch"
+		"watch": "webpack --mode=development --watch --devtool=inline-source-map"
 	},
 	"author": "Samual Norman",
 	"license": "MIT",
