--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "Samual Norman",
 	"license": "MIT",
 	"devDependencies": {
+		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.5.3",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.3.0",
