--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack --mode=production",
+		"build": "rm -frd dist && webpack --mode=production",
 		"watch": "webpack --mode=development --watch --devtool=inline-source-map"
 	},
 	"author": "Samual Norman",
 	"license": "MIT",
 	"devDependencies": {
-		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.5.3",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.3.0",
 		"style-loader": "^1.2.1",
-		"ts-loader": "^7.0.4",
+		"ts-loader": "^7.0.5",
 		"typescript": "^3.9.3",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11"
