--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "voltorb-flip",
 	"version": "0.1.0",
 	"description": "Faithful recreation of HGSS's VOLTORB Flip game.",
-	"main": "index.js",
+	"main": "src/index.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "rm -frd dist && webpack --mode=production",
