--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
 	"license": "MIT",
 	"devDependencies": {
 		"css-loader": "^3.6.0",
-		"file-loader": "^6.0.0",
-		"html-webpack-plugin": "^4.3.0",
-		"style-loader": "^1.2.1",
-		"ts-loader": "^8.0.1",
+		"destiny": "^0.7.1",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^4.5.0",
+		"style-loader": "^1.3.0",
+		"ts-loader": "^8.0.11",
 		"typescript": "^3.9.7",
-		"webpack": "^4.43.0",
-		"webpack-cli": "^3.3.12",
-		"destiny": "^0.7.0"
+		"webpack": "^4.44.2",
+		"webpack-cli": "^3.3.12"
 	},
 	"dependencies": {
 		"canvas-sprite-engine": "^1.0.1"
