--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
 	"author": "Samual Norman",
 	"license": "GPL-3.0-or-later",
 	"devDependencies": {
-		"css-loader": "^5.2.5",
-		"file-loader": "^6.2.0",
-		"html-webpack-plugin": "^5.3.1",
-		"style-loader": "^2.0.0",
-		"ts-loader": "^9.2.1",
-		"typescript": "^4.2.3",
-		"webpack": "^5.37.1",
-		"webpack-cli": "^4.7.0"
+		"css-loader": "6.x",
+		"file-loader": "6.x",
+		"html-webpack-plugin": "5.x",
+		"style-loader": "3.x",
+		"ts-loader": "9.x",
+		"typescript": "4.x",
+		"webpack": "5.x",
+		"webpack-cli": "4.x"
 	}
 }
