--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,19 @@
 {
 	"compilerOptions": {
-		"target": "ES2019",
-		"module": "ES6",
-		"sourceMap": true,
-		"outDir": "dist",
+		"target": "ES2020",
+		"useDefineForClassFields": true,
+		"module": "ESNext",
+		"lib": ["ES2020", "DOM", "DOM.Iterable"],
+		"skipLibCheck": true,
+		"moduleResolution": "bundler",
+		"allowImportingTsExtensions": true,
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true,
 		"strict": true,
-		"noImplicitAny": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true
 	},
-	"include": [
-		"src/index.ts",
-		"src/typings.d.ts"
-	]
+	"include": [ "src" ]
 }
