--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
 		"typescript": "^5.6.2",
 		"vite": "^5.4.7",
 		"vite-plugin-html-minifier-terser": "^3.8.0"
+	},
+	"engines": {
+		"pnpm": "^9"
 	}
 }
